# servers/assessment/assessments/router.go
@@ -13,24 +13,37 @@ import (
 func setupAssessmentRouter(routerGroup *gin.RouterGroup, authMiddleware func(allowedRoles ...string) gin.HandlerFunc) {
 	assessmentRouter := routerGroup.Group("/assessment")
 
-	assessmentRouter.POST("", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), createOrUpdateAssessment)
+	assessmentRouter.GET("", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByCoursePhase)
+	assessmentRouter.POST("", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), createAssessment)
+	assessmentRouter.PUT("", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), updateAssessment)
 	assessmentRouter.GET("/:assessmentID", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), getAssessment)
 	assessmentRouter.DELETE("/:assessmentID", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), deleteAssessment)
-
-	assessmentRouter.GET("/by-coursephase", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByCoursePhase)
-	assessmentRouter.GET("/:courseParticipationID/by-student", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByStudent)
-	assessmentRouter.GET("/:courseParticipationID/by-student-in-phase", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByStudentInPhase)
-	assessmentRouter.GET("/by-competency/:competencyID", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByCompetency)
-	assessmentRouter.GET("/by-category/:categoryID", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByCategory)
+	assessmentRouter.GET("/course-participation/:courseParticipationID", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByStudentInPhase)
+	assessmentRouter.GET("/competency/:competencyID", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByCompetencyInPhase)
+	assessmentRouter.GET("/category/:categoryID", authMiddleware(promptSDK.PromptAdmin, promptSDK.CourseLecturer), listAssessmentsByCategoryInPhase)
 }
 
-func createOrUpdateAssessment(c *gin.Context) {
+func createAssessment(c *gin.Context) {
 	var req assessmentDTO.CreateOrUpdateAssessmentRequest
 	if err := c.BindJSON(&req); err != nil {
 		handleError(c, http.StatusBadRequest, err)
 		return
 	}
-	assessment, err := CreateOrUpdateAssessment(c, req)
+	assessment, err := CreateAssessment(c, req)
+	if err != nil {
+		handleError(c, http.StatusInternalServerError, err)
+		return
+	}
+	c.JSON(http.StatusOK, assessment)
+}
+
+func updateAssessment(c *gin.Context) {
+	var req assessmentDTO.CreateOrUpdateAssessmentRequest
+	if err := c.BindJSON(&req); err != nil {
+		handleError(c, http.StatusBadRequest, err)
+		return
+	}
+	assessment, err := UpdateAssessment(c, req)
 	if err != nil {
 		handleError(c, http.StatusInternalServerError, err)
 		return
@@ -79,20 +92,6 @@ func listAssessmentsByCoursePhase(c *gin.Context) {
 	c.JSON(http.StatusOK, assessmentDTO.GetAssessmentDTOsFromDBModels(assessments))
 }
 
-func listAssessmentsByStudent(c *gin.Context) {
-	courseParticipationID, err := uuid.Parse(c.Param("courseParticipationID"))
-	if err != nil {
-		handleError(c, http.StatusBadRequest, err)
-		return
-	}
-	assessments, err := ListAssessmentsByStudent(c, courseParticipationID)
-	if err != nil {
-		handleError(c, http.StatusInternalServerError, err)
-		return
-	}
-	c.JSON(http.StatusOK, assessmentDTO.GetAssessmentDTOsFromDBModels(assessments))
-}
-
 func listAssessmentsByStudentInPhase(c *gin.Context) {
 	courseParticipationID, err := uuid.Parse(c.Param("courseParticipationID"))
 	if err != nil {
@@ -112,13 +111,18 @@ func listAssessmentsByStudentInPhase(c *gin.Context) {
 	c.JSON(http.StatusOK, assessmentDTO.GetAssessmentDTOsFromDBModels(assessments))
 }
 
-func listAssessmentsByCompetency(c *gin.Context) {
+func listAssessmentsByCompetencyInPhase(c *gin.Context) {
 	competencyID, err := uuid.Parse(c.Param("competencyID"))
 	if err != nil {
 		handleError(c, http.StatusBadRequest, err)
 		return
 	}
-	assessments, err := ListAssessmentsByCompetency(c, competencyID)
+	coursePhaseID, err := uuid.Parse(c.Param("coursePhaseID"))
+	if err != nil {
+		handleError(c, http.StatusBadRequest, err)
+		return
+	}
+	assessments, err := ListAssessmentsByCompetencyInPhase(c, competencyID, coursePhaseID)
 	if err != nil {
 		handleError(c, http.StatusInternalServerError, err)
 		return
@@ -126,13 +130,18 @@ func listAssessmentsByCompetency(c *gin.Context) {
 	c.JSON(http.StatusOK, assessmentDTO.GetAssessmentDTOsFromDBModels(assessments))
 }
 
-func listAssessmentsByCategory(c *gin.Context) {
+func listAssessmentsByCategoryInPhase(c *gin.Context) {
 	categoryID, err := uuid.Parse(c.Param("categoryID"))
 	if err != nil {
 		handleError(c, http.StatusBadRequest, err)
 		return
 	}
-	assessments, err := ListAssessmentsByCategory(c, categoryID)
+	coursePhaseID, err := uuid.Parse(c.Param("coursePhaseID"))
+	if err != nil {
+		handleError(c, http.StatusBadRequest, err)
+		return
+	}
+	assessments, err := ListAssessmentsByCategoryInPhase(c, categoryID, coursePhaseID)
 	if err != nil {
 		handleError(c, http.StatusInternalServerError, err)
 		return
